Cambios en diseño

--- a/public/html/css/indexdisenio.css
+++ b/public/html/css/indexdisenio.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 body
 {
   min-width: 100%;
@@ -53,8 +54,16 @@ header a
 {
   /*background-color: rgb(154, 169, 202, 0.4);*/
   max-width: 100%;
+  position: relative;
+  bottom:0;
+
   /*-webkit-filter: brightness(0.6)contrast(3.4)hue-rotate(217deg)saturate(9.9);
   filter: brightness(0.6)contrast(3.4)hue-rotate(217deg);*/
+}
+
+#imagePreview{
+max-width: 100%;
+  width: 100%;
 }
 #test9
 {
@@ -112,13 +121,20 @@ input
 {
   width: 100%;
   border-radius: 20px;
-  padding: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #dde2ed;
 }
 #map2
 {
   height:550px;
 }
+/*#test34{
+  margin-left: 85%;
+}
+*/
 #map1
 {
   height:360px
@@ -162,6 +178,15 @@ footer ul li a:hover{
   text-decoration: none;
   color: white;
 }
+.menu-btn {
+  color: white;
+  font-size: 25px;
+  float: right;
+  line-height: 90px;
+  margin-right: 40px;
+  cursor: pointer;
+  display: none;
+}
 #listaparadas li{
 -webkit-user-select: none; /* Safari */        
 -moz-user-select: none; /* Firefox */
@@ -180,7 +205,7 @@ user-select: none;
 justify-content: center;
 }
 #numeroLinea p{
-  padding-right: 150px;
+  padding-right: 30px;
 }
 #logofooter {
   display: flex; 
@@ -194,32 +219,46 @@ justify-content: center;
   display: flex;
   justify-content: center;
 }
-#test8{
-  padding-left: 340px;
-}
 #contenedor
 {
   position: relative;
+  bottom: 0;
   text-align: center;
 }
+#contenedor img{
+  opacity: 0.6;
+}
+#contenedor h1{
+  font-family:Verdana, Geneva, Tahoma, sans-serif
+}
+#contenedor p{
+  font-family: sans-serif;
+}
 #contenedor #test9{
+  color: rgb(226, 125, 16);
+  font-size: 50px;
+  -webkit-text-stroke: 2px black;
   position: absolute;
-  top: 25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 10%;
+  left: 25%;
+  right: 25%
 }
 #contenedor .test9parrafo{
+  color: rgb(91, 91, 199);
+  font-size: 30px;
+  -webkit-text-stroke: 2px black;
   position: absolute;
-  top: 35%;
+  top: 45%;
   left: 25%;
   right: 25%;
   font-weight: bold;
 }
 #mapacontacto{
+  margin-left: auto;
+  margin-right: auto;
   border: solid 1px #000;
   border-radius: 10px;
-  width: 400px;
-  height:400px;
+  height: 600px;
 }
 .caja{
   margin-left: auto;
@@ -234,5 +273,138 @@ justify-content: center;
   border-radius: 35px 0px 35px 0px; 
   -moz-border-radius: 35px 0px 35px 0px; 
   -webkit-border-radius: 35px 0px 35px 0px;
-  width: 450px;
+  width: 80%;
+}
+
+#test20{
+  display: none;
+}
+#isChecked {
+  display: none;
+}
+
+@media screen and (max-width:  800px){
+ 
+  #mapacontacto{
+    margin-left: auto;
+    margin-right: auto;
+    border: solid 1px #000;
+    border-radius: 10px;
+    height: 450px;
+  }
+#test00{
+  margin-top: 150px;
+}
+#test1{
+  background-color: #465a85;
+  width: 100%;
+  bottom: 0%;
+}
+#test19{
+  display: none;
+}
+#test20{
+  display: block;
+}
+.main-nav {
+  height: 90px;
+}
+
+.navlinks {
+  position: absolute;
+  width: 100%;
+  height: 55vh;
+  text-align: center;
+  background: #465a85;
+  right: -100%;
+  transition: all 0.5s;
+}
+
+  .navlinks li {
+    display: block;
+  }
+
+  .navlinks li a {
+    font-size: 20px;
+  }
+#contenedor #test9{
+  position: absolute;
+  top: 15%;
+  left: 25%;
+  right: 25%
+}
+#contenedor .test9parrafo{
+  position: absolute;
+  top: 40%;
+  left: 25%;
+  right: 25%;
+  font-weight: bold;
+}
+  .navlinks li a:hover {
+    border-bottom: none;
+  }
+  .menu-btn {
+    display: block;
+  }
+  
+
+li a.contact {
+  background-color: #00adb5;
+  padding: 9px 20px;
+  border-radius: 50px;
+  transition: all 0.3s linear 0s;
+}
+
+li a.contact:hover {
+  background-color: #047e85;
+  color: white;
+  border-bottom: none;
+}
+#isChecked:checked ~ .navlinks {
+  right: 0;
+  display: grid;
+}
+#isChecked:not(:checked) ~ .navlinks {
+  display: none;
+}
+#test31{
+  padding-bottom: 5%;
+}
+#test31{
+  padding-top: 5%;
+}
+#contenedor{
+  padding-bottom: 252px;
+  top: 250px;}
+  .caja{
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Century Gothic,CenturyGothic,AppleGothic,sans-serif; 
+    color:black; 
+    font-size: 18px; 
+    font-weight: 400; 
+    text-align: center; 
+    background: #889ccf;
+    padding: 20px; 
+    border-radius: 35px 0px 35px 0px; 
+    -moz-border-radius: 35px 0px 35px 0px; 
+    -webkit-border-radius: 35px 0px 35px 0px;
+    width: 80%;
+  }  
+}
+@media screen and (min-height: 803px){
+
+#test1{
+  background-color: #465a85;
+  width: 100%;
+  bottom: 0%;
+}
+#test19{
+  display: flex;
+}
+#test20{
+  display: none;
+}
+
+/*Final*/
 }
